migration-result/docs/ver/13.x/connect-your-client/teleport-connect.mdx
---
title: Using Teleport Connect
description: Using Teleport Connect
version: "13.x"
---

Teleport Connect provides easy and secure access to SSH servers, databases, and Kubernetes clusters,
with support for other resources coming in the future.

<img src="/assets/connect-cluster-f528f473f3.png" alt="resources tab in Teleport Connect" width="2545" height="1564" />

## Installation & upgrade

Head over to the [Downloads](https://goteleport.com/download/) page to download the most recent
version. Teleport Connect supports macOS, Linux, and Windows.

<Tabs>
  <Tab title="macOS">
    Double-click the downloaded `.dmg` file and drag the Teleport Connect icon to the Applications folder.

    To upgrade Teleport Connect to a newer version, drag the new version to the Applications folder.
  </Tab>

  <Tab title="Linux">
    Download the DEB (Debian-based distros) or RPM (RHEL-based distros) package and install it using
    your package manager. Repeat the process for in-place upgrades.

    You can also download the project as a `tar.gz` file to extract and run it in place:

    ```bash
    $ tar -xf  teleport-connect-13.4.16-linux-*.tar.gz
    ```
  </Tab>

  <Tab title="Windows">
    Download and run the installer `.exe` file. It will install and open Teleport Connect without
    further user input.

    Repeat the process with newer versions to upgrade.

    A silent installation can be performed by running the installer with the `/S` flag. This will hide
    the progress bar and skip the launch of the app after the installation is complete.

    ```bash
    $ "Teleport Connect Setup-13.4.16.exe" /S
    ```
  </Tab>
</Tabs>

## User interface

<img src="/assets/connect-ui-overview-c5655c3b8e.png" alt="user interface of Teleport Connect" width="2541" height="1562" />

The top bar of Teleport Connect consists of:

- The **profile selector** (the top right), which allows you to switch between profiles on different
  Teleport clusters as well as log in or out of the clusters.
- The **connection list** (the top left) showing recent connections, allowing you to seamlessly switch
  between them.
- The **search bar** (in the middle), which allows you to search for resources across clusters.
- The **cluster selector** (to the left of the search bar), which shows up only if you have set up
  Trusted Clusters and there are leaf clusters connected to the root cluster. It lets you browse
  leaf cluster resources. Also, the "Open new terminal" action will bind new terminal tabs to the selected cluster.
- The **additional actions menu** (to the left of the profile selector), containing options such as
  opening a config file or creating an access request in an Enterprise cluster.

The **status bar** at the bottom displays **cluster breadcrumbs** in the bottom left, indicating
which cluster the current tab is bound to, and the **Share Feedback** button in the bottom right.

## Connecting to an SSH server

1. Open a tab with cluster resources by clicking on the plus symbol at the right end of the tab bar.
   You can also press <span>`Ctrl/Cmd + T`</span> to achieve the same result.
2. Look for the SSH server you want to connect to and click the Connect button to the right.
3. Select or enter the SSH user you wish to log in as and press `Enter`.

A new tab will open with a shell session on the chosen server.

Alternatively, you can look for the server in the search bar and press `Enter` to connect to it.

## Opening a local terminal

To open a terminal with a local shell session, either select "Open new terminal" from the additional
actions menu or press <span>`Ctrl/Cmd + Shift + T`</span>.

Any tsh command executed within the tab targets the current cluster. Teleport Connect accomplishes
this by setting the environment variables `TELEPORT_PROXY` and `TELEPORT_CLUSTER` for the session.
Additionally, Teleport Connect prepends the `PATH`/`Path` environment variable in the session with the
directory containing the tsh binary, even if [tsh is not globally available](#using-tsh-outside-of-teleport-connect).

When using [Trusted Clusters](/docs/ver/13.x/management/admin/trustedclusters), the cluster selector allows
you to determine which cluster the shell session will be bound to. The selected cluster will be
reflected in both the tab title and the status bar.

## Connecting to a Kubernetes cluster

1. Open a tab with cluster resources by clicking on the plus symbol at the right end of the tab bar.
   You can also press <span>`Ctrl/Cmd + T`</span> to achieve the same result.
2. Select the Kubes section.
3. Look for the cluster you wish to connect to and click the Connect button to the right.

A new local terminal tab will open which is preconfigured with the `$KUBECONFIG` environment variable
pointing to a configuration for the specified cluster. Any tools that you have installed that respect
the `$KUBECONFIG` environment variable (`kubectl`, `helm`, etc.) will work without additional configuration.
To identify the path to this config for use in other tools, run `echo $KUBECONFIG`.

Alternatively, you can look for the cluster in the search bar and press `Enter` to connect to it.

## Connecting to a database

1. Open a tab with cluster resources by clicking on the plus symbol at the end of the tab bar. You
   can also press <span>`Ctrl/Cmd + T`</span> to achieve the same result.
2. Select the Databases section.
3. Look for the database server you wish to connect to and click the Connect button to the right.
4. Select or enter the database user you wish to use and press `Enter`.

A new tab will open with a new connection established between your device and the database server.

Alternatively, you can look for the database in the search bar and press `Enter` to connect to it.

This connection will remain active until you click the Close Connection button or close Teleport
Connect. The port number will persist between app restarts—you can set up your favorite client
without worrying about the port suddenly changing.

### With a GUI client

To connect with a GUI client, follow the instructions in the database connection tab under the
Connect with GUI section.

### With a CLI client

The database connection tab shows the command that can be used to connect to the database. You can
modify the database name of the connection and then click the Run button to open a new terminal tab
with that command executed.

## Connecting to multiple clusters

Teleport Connect allows you to log in to multiple clusters at the same time. After logging in to
your first cluster, open the profile selector at the top right and click the *+Add another cluster*
button. You can switch between active profiles in multiple ways:

1. Click at the profile selector button at the top right.
2. Open the profile selector with a shortcut (<span>`Ctrl/Cmd + I`</span>).
3. Select a connection from the connection list at the top to automatically switch to the right profile.

At the moment Teleport Connect supports only one user per cluster. To log in as a different user,
log out of the cluster first.

## Restarting and reconnecting

Before closing, Teleport Connect will remember the tabs that you had open at the end of the session.
Next time you open the app, Connect will ask you if you want to reopen those tabs. If you agree,
Connect will restore connections to all resources that were active before you closed the app.

When restoring terminal tabs, Teleport Connect doesn't attempt to re-execute commands that were in
progress when the app was closed. It will only restore the working directory for those tabs.

## Using tsh outside of Teleport Connect

Teleport Connect ships with its own bundled version of tsh. Teleport Connect will always use this
version of tsh for any actions performed within the app.

Teleport Connect makes tsh available to use in your terminal of choice as well. Please note that at
the moment tsh and Teleport Connect operate on different sets of profiles, as Teleport Connect sets
a custom home location through [the `TELEPORT_HOME` environment
variable](/docs/ver/13.x/reference/cli/tsh#tsh-environment-variables). For example, logging in to a new cluster
through tsh will not make that cluster show up in Teleport Connect.

<Tabs>
  <Tab title="macOS">
    To add tsh to `PATH`, open the additional actions menu and select "Install tsh in PATH". This will
    symlink tsh to `/usr/local/bin`. You can remove the symlink by selecting "Remove tsh from PATH".

    If you used the tsh macOS .pkg installer before, this will overwrite the symlink made by that installer.
  </Tab>

  <Tab title="Linux">
    During installation, Teleport Connect automatically adds a symlink to tsh under
    `/usr/local/bin/tsh`, unless you have already installed the `teleport` package, which also creates
    that symlink.
  </Tab>

  <Tab title="Windows">
    During installation, Teleport Connect automatically adds the `resources\bin` folder from the
    installation directory to the `Path` user environment variable.
  </Tab>
</Tabs>

## Configuration

Teleport Connect can be configured by editing the `app_config.json` file, which it creates on first launch.
To open the config file, select "Open config file" from the additional actions menu.
The file will open in your default editor.

<Note>
  <p>
    **Note**
  </p>

  Any changes to the config file will take effect at the next launch.
</Note>

Below is the list of the supported config properties.

| Property                      | Default                                                                                                                | Description                                                                                                |
| ----------------------------- | ---------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------- |
| `theme`                       | `system`                                                                                                               | Color theme for the app. Available modes: `light`, `dark`, `system`.                                       |
| `terminal.fontFamily`         | `Menlo, Monaco, monospace` on macOS<br />`Consolas, monospace` on Windows<br />`'Droid Sans Mono', monospace` on Linux | Font family for the terminal.                                                                              |
| `terminal.fontSize`           | 15                                                                                                                     | Font size for the terminal.                                                                                |
| `usageReporting.enabled`      | `false`                                                                                                                | Enables collecting anonymous usage data (see [Telemetry](#telemetry)).                                     |
| `keymap.tab1` - `keymap.tab9` | `Command+1` - `Command+9` on macOS <br /> `Ctrl+1` - `Ctrl+9` on Windows<br />`Alt+1` - `Alt+9` on Linux               | Shortcut to open tab 1–9.                                                                                  |
| `keymap.closeTab`             | `Command+W` on macOS<br />`Ctrl+W` on Windows/Linux                                                                    | Shortcut to close a tab.                                                                                   |
| `keymap.newTab`               | `Command+T` on macOS<br />`Ctrl+T` on Windows/Linux                                                                    | Shortcut to open a new tab.                                                                                |
| `keymap.newTerminalTab`       | `Shift+Command+T` on macOS<br />`Ctrl+Shift+T` on Windows/Linux                                                        | Shortcut to open a new terminal tab.                                                                       |
| `keymap.previousTab`          | `Shift+Command+Tab` on macOS<br />`Ctrl+Shift+Tab` on Windows/Linux                                                    | Shortcut to go to the previous tab.                                                                        |
| `keymap.nextTab`              | `Command+Tab` on macOS<br />`Ctrl+Tab` on Windows/Linux                                                                | Shortcut to go to the next tab.                                                                            |
| `keymap.openConnections`      | `Command+P` on macOS<br />`Ctrl+P` on Windows/Linux                                                                    | Shortcut to open the connection list.                                                                      |
| `keymap.openClusters`         | `Command+E` on macOS<br />`Ctrl+E` on Windows/Linux                                                                    | Shortcut to open the cluster selector.                                                                     |
| `keymap.openProfiles`         | `Command+I` on macOS<br />`Ctrl+I` on Windows/Linux                                                                    | Shortcut to open the profile selector.                                                                     |
| `keymap.openSearchBar`        | `Command+K` on macOS<br />`Ctrl+K` on Windows/Linux                                                                    | Shortcut to open the search bar.                                                                           |
| `headless.skipConfirm`        | false                                                                                                                  | Skips the confirmation prompt for Headless WebAuthn approval and instead prompts for WebAuthn immediately. |

<Note>
  <p>
    **Note**
  </p>

  The additional `$schema` property present in the config file allows text editors to provide autocompletion.
  It should not be modified.
</Note>

### Configuring keyboard shortcuts

A valid shortcut contains at least one modifier and a single key code, for example <span>`Shift+Tab`</span>.
Function keys such as `F1` do not require a modifier.
Modifiers and a key code must be combined by the `+` character.

Available modifiers:

- `Control`, `Option`, `Shift`, `Command` on macOS.
- `Ctrl`, `Alt`, `Shift` on Windows and Linux.

Available key codes:

- `0` to `9`
- `A` to `Z`
- `F1` to `F24`
- `,`, `.`, `/`, `\`, `` ` ``, `-`, `=`, `;`, `'`, `[`, `]`
- `Space`, `Tab`, `CapsLock`, `NumLock`, `ScrollLock`, `Backspace`, `Delete`, `Insert`, `Enter`, `Up`, `Down`, `Left`, `Right`, `Home`, `End`, `PageUp`, `PageDown`, `Escape`, `IntlBackslash`

## Telemetry

When you first start the app, Teleport Connect asks for permission to collect and send telemetry data.
This includes tracking events such as:

- Logging in to a cluster
- Starting an SSH, database, or Kubernetes session
- File transfer during an SSH session
- Creating an Access Request
- Reviewing an Access Request
- Assuming an Access Request

On login, we also collect some device-related data:

- Operating system and its version
- App version
- Processor architecture

Additionally, we ask for a job role (answer is optional).

The full list of events and collected data is defined as [protocol buffer messages in the Teleport source](https://github.com/gravitational/teleport/tree/branch/v13/proto/prehog/v1alpha/connect.proto).
We do not track the details of those events but merely that the given event took place. Each event includes the cluster
name and user name anonymized with HMAC using the cluster's internal random UUID as the key. It is infeasible to
associate this back to a specific cluster or user without access to the cluster's internal datastore.

### Disabling telemetry

If you initially agreed to share telemetry data, but now want to opt out, you need to set `usageReporting.enabled` in the config to `false` (see [Configuration](#configuration)):

```json
"usageReporting.enabled": false
```

The changes will take effect at the next launch.

## Troubleshooting

Resetting the app state might help with UI crashes caused by Teleport Connect getting into an
abnormal state. This might happen after downgrading Teleport Connect or performing substantial
server-side changes. Those UI crashes typically manifest as a blank window or an Internal Error
alert.

To reset the state related to a particular cluster:

1. Log out of the cluster.
2. Close Teleport Connect.
3. Open Teleport Connect, then log back in to the cluster.

To completely wipe all app state:

1. Close Teleport Connect.
2. Remove the internal `tsh` folder and the `app_state.json` file to log out of all clusters and
   clear all remembered tabs and connections.

<Tabs>
  <Tab title="macOS">
    ```bash
    $ rm -rf ~/Library/Application\ Support/Teleport\ Connect/{tsh,app_state.json}
    ```
  </Tab>

  <Tab title="Linux">
    ```bash
    $ rm -rf ~/.config/Teleport\ Connect/{tsh,app_state.json}
    ```
  </Tab>

  <Tab title="Windows">
    ```bash
    $ rmdir /s /q C:\Users\%UserName%\AppData\Roaming\"Teleport Connect"\tsh
    $ del C:\Users\%UserName%\AppData\Roaming\"Teleport Connect"\app_state.json
    ```
  </Tab>
</Tabs>

### Submitting an issue

To submit an issue, click the Submit Feedback button at the bottom right (the speech bubble symbol)
and follow the *Submit a Bug* link.

<Tabs>
  <Tab title="macOS">
    Be sure to attach logs, which can be found under `~/Library/Application Support/Teleport Connect/logs`.
    The version of the app can be found in the app menu under the About Teleport Connect menu item.

    To get more detailed logs, run Teleport Connect with the `--connect-debug` flag:

    ```bash
    # Using macOS open utility:
    $ open -a "Teleport Connect" --args --connect-debug

    # Running the executable directly:
    $ /Applications/Teleport\ Connect.app/Contents/MacOS/Teleport\ Connect --connect-debug
    ```
  </Tab>

  <Tab title="Linux">
    Be sure to attach logs, which can be found under `~/.config/Teleport Connect/logs`. The app version
    can be found by pressing `Alt` to access the app menu, then -> Help -> About Teleport Connect.

    To get more detailed logs, run Teleport Connect with the `--connect-debug` flag:

    ```bash
    $ teleport-connect --connect-debug
    ```
  </Tab>

  <Tab title="Windows">
    Be sure to attach logs, which can be found under `C:\Users\%UserName%\AppData\Roaming\Teleport Connect\logs`.
    You may need to adjust File Explorer to [view hidden files and folders](https://support.microsoft.com/en-us/search?query=how%20to%20view%20hidden%20files%20in%20windows%2010).
    The app version can be found by pressing `Alt` to access the app menu -> Help -> About Teleport Connect.

    To get more detailed logs, open Teleport Connect from the Command Prompt with the `--connect-debug` flag:

    ```bash
    $ "%LocalAppData%\Programs\teleport-connect\Teleport Connect.exe" --connect-debug
    ```
  </Tab>
</Tabs>

### Updating local shell environment

Teleport Connect updates and caches the local shell environment on app restart and not when starting
a new shell session. If you add new environment variables to your shell startup files, Connect will
see them only after you restart the app.

### Skipping TLS certificate verification

You can open Teleport Connect in insecure mode, which skips TLS certificate verification when
talking to a Teleport Proxy Service. This is useful in [test environments with self-signed
certificates](/docs/ver/13.x/management/admin/self-signed-certs) or for demo purposes. We do not recommend
using this mode in production.

<Tabs>
  <Tab title="macOS">
    To launch the app in insecure mode, open a terminal first. From there you can launch the app in one
    of two ways:

    ```bash
    # Using macOS open utility:
    $ open -a "Teleport Connect" --args --insecure

    # Running the executable directly:
    $ /Applications/Teleport\ Connect.app/Contents/MacOS/Teleport\ Connect --insecure
    ```
  </Tab>

  <Tab title="Linux">
    From a terminal, open Teleport Connect with the `--insecure` flag:

    ```bash
    $ teleport-connect --insecure
    ```
  </Tab>

  <Tab title="Windows">
    From the Command Prompt, open Teleport Connect with the `--insecure` flag:

    ```bash
    $ "%LocalAppData%\Programs\teleport-connect\Teleport Connect.exe" --insecure
    ```
  </Tab>
</Tabs>

## Uninstalling Teleport Connect

<Tabs>
  <Tab title="macOS">
    Remove Teleport Connect for MacOS from the Applications directory with this command:

    ```bash
    $ sudo rm -rf /Applications/Teleport\ Connect.app
    ```

    To remove the local user data directory:

    ```bash
    $ rm -rf ~/Library/Application\ Support/Teleport\ Connect
    ```
  </Tab>

  <Tab title="Windows">
    You can uninstall Teleport Connect from the "Apps and Features" section of the Control Panel.

    For reference, Teleport Connect binaries are installed to `%LOCALAPPDATA%\Programs\teleport-connect`.

    To remove the local user data directory:

    ```powershell
    $ rmdir /s /q "%APPDATA%\Teleport Connect"
    ```
  </Tab>

  <Tab title="Linux">
    For DEB installations uninstall Teleport Connect using APT:

    ```bash
    $ sudo apt remove teleport-connect
    ```

    For RPM installations uninstall Teleport Connect using YUM:

    ```bash
    $ sudo yum remove teleport-connect
    ```

    Installs based on a tarball should remove the
    `teleport-connect` directory and any copied/linked executables.
  </Tab>
</Tabs>
